	wasted memory overhead.

   !	readClientData: fix another issue related to the dot
	transparency fix.

   !	cmdXclient: fixed seg.fault caused when NAME= specified due to
	wrong variable being referenced.

   !	Enhanced restart command option to take a numeric value of
	seconds to wait before continuing after sending the QUIT signal
	to the old running process.

--2.2.32--

   +	attachment.c/h, access.c/h: added support for filename-*,
   	mimetype-*, and archname-* access tags.

   !	grey-content hack for Exchange:

   	Exchange is a piece of crap. The MD5 of first message body
	does not match the MD5 of the second and and subsequent
	message retries. Exchange appears to change the MIME
	boundary, possible QP, and spacing, and might add also
	message disclaimers, essentially fucking with any attempt
	to hash the first message body.

	The only constant is that the message-id is the same: so
	we cache the message-id of the first attempt. On the second
	attempt of the message with the same message-id, we replace
	the first MD5 hash with the value of the second message
	attempt, discard the message-id from the cache, and temp.
	fail one more time. The third retry the message should thus
	subsequently pass grey-content.

	Suggested fix by Steve Freegard.

   +	Added one-domain-per-session option.

   !	Change ctasd-stream from boolean to value: 0 = message file,
	1 = proxy streaming, 2 = stream message file. ctasd-stream=1 does
	not work yet without changes to ctasd to detect EOF or do chunked
	data instead of depending on Content-Length: header.

   !	cmdData: Fix bug related to previous transparency fix.

--2.2.31--

   !	Fixed bug concerning double tagging the subject line. In
   	particular, skip spamd if the subject has already been
   	tagged. Add an option spamd-skip-tagged.

   !	Fixed bug where ctasd failed to tag unless spamd was also
   	being used.

   +	Add transaction-id to sender and recipient log lines.

--2.2.30--

   *	Requires Libsnert 1.72.8
